add service discovery server-client dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.scarlettech</groupId>
-  <artifactId>microservices-new</artifactId>
+  <artifactId>su-shop</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -18,12 +18,14 @@
     <module>product-service</module>
     <module>order-service</module>
     <module>inventory-service</module>
+    <module>discovery-server</module>
   </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.commpiler.source>17</maven.commpiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <spring-cloud.version>2023.0.0</spring-cloud.version>
   </properties>
 
   <dependencyManagement>
@@ -32,6 +34,13 @@
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-bom</artifactId>
         <version>1.19.6</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
