--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.scarlettech</groupId>
-        <artifactId>microservices-new</artifactId>
+        <artifactId>su-shop</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -34,6 +34,10 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
