--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.scarlettech</groupId>
-        <artifactId>microservices-new</artifactId>
+        <artifactId>su-shop</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -28,6 +28,10 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
