--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -4,3 +4,25 @@ spring.application.name=api-gateway
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
+
+## Product Service route
+spring.cloud.gateway.mvc.routes[0].id=product-service
+spring.cloud.gateway.mvc.routes[0].uri=lb://product-service
+spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/products
+
+## Order Service route
+spring.cloud.gateway.mvc.routes[1].id=order-service
+spring.cloud.gateway.mvc.routes[1].uri=lb://order-service
+spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/api/orders
+
+## Discovery Server route
+spring.cloud.gateway.mvc.routes[2].id=discovery-server
+spring.cloud.gateway.mvc.routes[2].uri=http://localhost:8761
+spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.mvc.routes[2].filters[0]=SetPath=/
+
+## Discovery Server Static Resources route
+spring.cloud.gateway.mvc.routes[3].id=discovery-server-static
+spring.cloud.gateway.mvc.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.mvc.routes[3].predicates[0]=Path=/eureka/**
+
