--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.data.mongodb.uri=mongodb+srv://suyin2096:PExT4ofTOtn0Lf4R@su-shop.7fpuzdh.mongodb.net/?retryWrites=true&w=majority&appName=su-shop
 spring.data.mongodb.database=su-shop
+server.port=8082
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=product-service
