--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=api-gateway
+server.port=8181
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
